--- a/style/style1.css
+++ b/style/style1.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
 }
-.home {
+.container{
     width: 100%;
-    height: 700px;
-    background-color: rgb(11, 11, 12);
+    height: 2050px;
+    background-color: black;
 }
 header {
     width: 100%;
@@ -39,5 +39,194 @@ header {
     font-weight: 400;
     font-style: normal;
     font-size: 25px;
+    color: white;
+}
+.menu ul li a:hover{
+    color: rgb(6, 250, 6);
+}
+.body11{
+    width: 40%;
+    height: 600px;
+    background-color: beige;
+    border-radius: 20px;
+    float: left;
+    margin-left: 50px;
+    margin-top: 40px;
+}
+.body11 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+.body22{
+    width: 50%;
+    height: 600px;
+    float: left;
+    margin-left: 30px;
+}
+.body22 h1{
+    color: white;
+    margin-top: 30px;
+    font-size: 40px;
+}
+.body22 h3{
+    color: white;
+    margin-top: 10px;
+    font-size: 35px;
+    padding-top: 22px;
+}
+.box{
+    width: 100%;
+    height: 300px;
+    margin-top: 750px;
+}
+.box11{
+    width: 300px;
+    height: 250px;
+    background-color: blanchedalmond;
+    border-radius: 25px;
+    float: left;
+    margin-left: 16px;
+}
+.box11-1{
+    width: 100%;
+    height: 200px;
+    border-radius: 25px 25px 0 0;
+    margin-top: 70px;
+}
+.box11-1 a{
+    color: black;
+    font-size: 90px;
+    margin-left: 105px;
+}
+.box11-2{
+    width: 100%;
+    height: 50px;
+    margin-top: -100px;
+    border-radius: 0 0 25px 25px;
+}
+.box11-2 h3{
+    text-align: center;
+}
+.box11-2 h2{
+    text-align: center;
+    font-weight: bold;
+}
+.skills{
+    width: 100%;
+    height: 100px;
+}
+.skill-1{
+    width: 100%;
+    height: 100px;
+    margin-left: 30px;
+}
+.skill-11{
+    width: 10%;
+    height: 100px;
+    color: white;
+    float: left;
+    margin-top: 50px;
+}
+.skill-22{
+    width: 20%;
+    height: 10px;
+    background-color: greenyellow;
+    float: left;
+    margin-top: 70px;
+}
+.box-skill{
+    width: 50%;
+    height: 500px;
+    margin-left: -170px;
+    float: left;
+}
+.box-skill-one{
+    width: 50%;
+    height: 500px;
+    float: left;
+}
+.box-skill-11{
+    width: 90%;
+    height: 100px;
+    margin-top: 100px;
+    margin-left: 40px;
+}
+.boxA{
+    width: 100%;
+    height: 50px;
+}
+.boxA-1{
+    width: 50%;
+    height: 50px;
+    float: left;
+}
+.boxA-1 h2{
+    color: white;
+    margin-top: 20px;
+}
+.boxA-11{
+    width: 50%;
+    height: 50px;
+    float: left;
+}
+.boxA-11 h2{
+    color: white;
+    margin-top: 20px;
+    margin-left: 210px;
+}
+.boxB{
+    width: 100%;
+    height: 50px;
+}
+.boxB-1{
+    width: 90%;
+    height: 20px;
+    background-color: rgb(2, 250, 2);
+    float: left;
+}
+.boxB-11{
+    width: 10%;
+    height: 20px;
+    background-color: rgb(83, 82, 82);
+    float: left;
+}
+.boxB-2{
+    width: 80%;
+    height: 20px;
+    background-color: rgb(2, 250, 2);
+    float: left;
+}
+.boxB-22{
+    width: 20%;
+    height: 20px;
+    background-color: rgb(83, 82, 82);
+    float: left;
+}
+footer {
+    width: 100%;
+    height: 100px;
+    background-color: rgba(43, 37, 85, 0.664);
+    margin-top: 700px;
+}
+.boxlogo {
+    width: 20%;
+    height: 100px;
+    background-image: url(/imgs/logo.png);
+    float: left;
+}
+.icon {
+    float: left;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+.icon a{
+    color: white;
+    font-size: 30px;
+    text-decoration: none;
+}
+.icon h2 {
+    font-size: 30px;
     color: white;
 }
