--- a/style/style2.css
+++ b/style/style2.css
@@ -1,11 +1,11 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
-.home {
+.container{
     width: 100%;
     height: 700px;
-    background-image: url(/imgs/background.webp);
+    background-color: black;
 }
 header {
     width: 100%;
@@ -41,58 +41,34 @@ header {
     font-size: 25px;
     color: white;
 }
-.menu ul li a:hover {
-    color: rgb(20, 243, 20);
+.menu ul li a:hover{
+    color: rgb(6, 250, 6);
 }
-.text {
-    width: 55%;
-    height: 440px;
-    background-color: rgba(0, 0, 0, 0.411);
-    margin-top: 30px;
-    margin-left: 20px;
+.body{
+    width: 100%;
+    height: 500px;
+    background-color: cornflowerblue;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 2%;
+}
+.box-img{
+    width: 35%;
+    height: 400px;
+    background-color: chartreuse;
+    margin-top: 50px;
     border-radius: 20px;
 }
-.text img{
-    width: 40%;
-    height: 300px;
-}
-.textii h1{
-    font-family: "New Rocker", serif;
-    font-weight: 400;
-    font-style: normal;
-    color: rgb(34, 241, 6);
-    font-size: 70px;
-    margin-left: 40px;
-    padding: 40px;
-}
-.textii h2{
-    margin-left: 80px;
-    padding: 20px;
-    color: white;
-}
-.text button{
-    background-color: rgb(18, 245, 18);
-    width: 45%;
-    height: 70px;
-    border-radius: 50px;
-    margin-left: 160px;
-    border: none;
-    margin-top: 50px;
-}
-.text button a{
-    text-decoration: none;
-    color: black;
-    font-family: "Anton SC", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
+.box-img img{
+    width: 100%;
+    height: 400px;
+    border-radius: 20px;
+    object-fit: cover;
 }
 footer {
     width: 100%;
     height: 100px;
     background-color: rgba(43, 37, 85, 0.664);
-    margin-top: 30px;
 }
 .boxlogo {
     width: 20%;
