--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 .home {
     width: 100%;
     height: 700px;
-    background-image: url(/imgs/background.webp);
+    background-image: url(../imgs/background.webp);
 }
 header {
     width: 100%;
@@ -15,7 +15,7 @@ header {
 .logo {
     width: 20%;
     height: 100px;
-    background-image: url(/imgs/logo.png);
+    background-image: url(../imgs/logo.png);
     float: left;
 }
 .menu {
@@ -97,7 +97,7 @@ footer {
 .boxlogo {
     width: 20%;
     height: 100px;
-    background-image: url(/imgs/logo.png);
+    background-image: url(../imgs/logo.png);
     float: left;
 }
 .icon {
