--- a/style/style1.css
+++ b/style/style1.css
@@ -2,10 +2,11 @@
     margin: 0;
     padding: 0;
 }
-.container{
+body {
     width: 100%;
-    height: 2050px;
+    height: 100%;
     background-color: black;
+    margin: auto;
 }
 header {
     width: 100%;
@@ -15,7 +16,7 @@ header {
 .logo {
     width: 20%;
     height: 100px;
-    background-image: url(/imgs/logo.png);
+    background-image: url(../imgs/logo.png);
     float: left;
 }
 .menu {
@@ -213,7 +214,7 @@ footer {
 .boxlogo {
     width: 20%;
     height: 100px;
-    background-image: url(/imgs/logo.png);
+    background-image: url(../imgs/logo.png);
     float: left;
 }
 .icon {
