--- a/style/style3.css
+++ b/style/style3.css
@@ -15,7 +15,7 @@ header {
 .logo {
     width: 20%;
     height: 100px;
-    background-image: url(/imgs/logo.png);
+    background-image: url(../imgs/logo.png);
     float: left;
 }
 .menu {
@@ -97,7 +97,7 @@ footer {
 .boxlogo {
     width: 20%;
     height: 100px;
-    background-image: url(/imgs/logo.png);
+    background-image: url(../imgs/logo.png);
     float: left;
 }
 .icon {
